# Linux_IPC_Playground

./: .gitignore  README.md
cobs_encoding/: README.md
cobs_encoding/include/: cobs_encoding.h
cobs_encoding/src/: cobs_encoding.c
latency_comparison/: README.md  fifo_common.h  fifo_echo  fifo_echo.c  fifo_send  fifo_send.c
linked_list/: README.md  linked_list.c  linked_list.h
multi_client_single_server/: "subscribe  CMakeLists.txt  README.md  fifo_client.c  fifo_common.h  fifo_server.c  fifo_sub_736054subscribe  linked_list.c  linked_list.h
multi_client_single_server/lib/linked_list/: linked_list.c
multi_client_single_server/src/: fifo_client.c  fifo_common.h  fifo_server.c  linked_list.c  linked_list.h
multi_reader_example/: README.md  fifo_common.h  fifo_reader  fifo_reader.c  fifo_sender  fifo_sender.c
serial_port_async/: CMakeLists.txt  README.md  debug.sh
serial_port_async/src/: serial_port_async.c  serial_port_async.h
serial_port_pthread/: CMakeLists.txt  README.md  release.sh
serial_port_pthread/src/: serial_port_pthread.c  serial_port_pthread.h
